tests/baselines/reference/jsxJsxsCjsTransformKeyPropCustomImportPragma(jsx=react-jsxdev).errors.txt
tests/cases/conformance/jsx/jsxs/preact.tsx(4,11): error TS2307: Cannot find module 'preact/jsx-dev-runtime' or its corresponding type declarations.


==== tests/cases/conformance/jsx/jsxs/react.tsx (0 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxImportSource react */
    import "./preact";
    const props2 = { answer: 42 }
    const a2 = <div key="foo" {...props2}>text</div>;
    const b2 = <div {...props2} key="bar">text</div>;
    
    export {};
    
==== tests/cases/conformance/jsx/jsxs/preact.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    /* @jsxImportSource preact */
    const props = { answer: 42 }
    const a = <div key="foo" {...props}>text</div>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'preact/jsx-dev-runtime' or its corresponding type declarations.
    const b = <div {...props} key="bar">text</div>;
    
    export {};
    